[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "git_find_related_commits"
authors = [
    {name = "Albert Zeyer", email = "albzey@gmail.com"},
    {name = "Antti Kaihola", email = "13725+akaihola@users.noreply.github.com"}
]
maintainers = [
    {name = "Antti Kaihola", email = "13725+akaihola@users.noreply.github.com"}
]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.7"
dynamic = ["version", "description"]
dependencies = [
    "GitPython",
]

[project.urls]
Home = "https://github.com/akaihola/git-find-related-commits"

[project.scripts]
git-find-related-commits = "git_find_related_commits.__main__:main"
